@@ -1,4 +1,5 @@
 
+	* add getters for peer_class_filter and peer_class_type_filter
 	* make torrent_handler::set_priority() to use peer_classes
 	* fix support for boost-1.66 (requires C++11)
 	* fix i2p support
